<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_book"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.begginers.bookstore.BookActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginBottom="@dimen/marBottom"
            android:text="@string/update"
            android:textColor="@color/offWhite"
            android:background="@color/colorPrimaryDark"
            android:textAlignment="center"
            android:textSize="@dimen/textSize"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <EditText
        android:id="@+id/edIdUp"
        android:background="@color/offWhite"
        android:hint="@string/edHint"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/marginBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edNameUp"
        android:background="@color/offWhite"
        android:hint="@string/nameHint"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/marginBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edBookIdUp"
        android:hint="@string/bookHint"
        android:background="@color/offWhite"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/marginBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edQuantityUp"
        android:hint="@string/edQuantity"
        android:background="@color/offWhite"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/marginBottomLarge"
        android:layout_height="wrap_content" />


</LinearLayout>