<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.begginers.bookstore.MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnSubmit"
            android:layout_gravity="center"
            android:text="@string/book_add"
            android:textSize="@dimen/btnTextSize"
            android:layout_width="@dimen/btnSize"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnUpdate"
            android:layout_gravity="center"
            android:text="@string/book_update"
            android:textSize="@dimen/btnTextSize"
            android:layout_width="@dimen/btnSize"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnShow"
            android:text="@string/book_show"
            android:layout_gravity="center"
            android:textSize="@dimen/btnTextSize"
            android:layout_width="@dimen/btnSize"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnShowDia"
            android:layout_gravity="center"
            android:text="@string/book_show_dia"
            android:textSize="@dimen/btnTextSize"
            android:layout_width="@dimen/btnSize"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>
