<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/gradient"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_book"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.begginers.bookstore.BookActivity">

        <EditText
            android:id="@+id/edName"
            android:background="@color/offWhite"
            android:hint="@string/nameHint"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/marginBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edBookId"
            android:hint="@string/bookHint"
            android:background="@color/offWhite"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/marginBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/edQuantity"
            android:hint="@string/edQuantity"
            android:background="@color/offWhite"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/marginBottomLarge"
            android:layout_height="wrap_content" />


    </LinearLayout>
</LinearLayout>
